--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "commander": "^2.9.0",
+    "debug": "^2.2.0",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "tabtab": "^1.3.2"
   },
   "devDependencies": {},
