--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mattwalters5@gmail.com",
-  "license": "ISC"
+  "license": "MIT"
 }
