--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cardstack-extension-manager",
+  "name": "cardstack-plugin-manager",
   "version": "0.0.0",
-  "description": "utility project for creating, verifying, and installing cardstack extensions",
+  "description": "utility project for creating, verifying, and installing cardstack plugins",
   "main": "index.js",
   "dependencies": {
     "commander": "^2.9.0",
@@ -14,6 +14,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "mattwalters5@gmail.com",
+  "author": "hi@iammattwalters",
   "license": "MIT"
 }
